# reboot-ubiquiti-nano-beam-rust

./: Cargo.toml
src/: main.rs
