[package]
name = "reboot-ubiquiti-nano-beam-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["cargo"] }
cronjob = "0.4.17"
dotenvy = "0.15.7"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", branch = "main" }
